--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,33 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color:white;
 }
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html,body{
+  overflow-x: hidden;
+}
+body::-webkit-scrollbar{
+  display: none;
+}
+.flex{
+  display: flex;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.column{
+  flex-direction: column;
+}
+.j-between{
+  justify-content: space-between;
+}
+.j-center{
+  justify-content: center;
+}
+.a-center{
+  align-items: center;
 }
